--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,16 @@
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
+##############################################################################
+# Stack
+##############################################################################
+
+set(ROSPACK_MAKEDIST true)
+rosbuild_make_distribution(0.1.6)
+
+##############################################################################
+# Package
+##############################################################################
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
