--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,15 @@
 <package>
-  <name>zeroconf_comms</name>
-  <version>0.1.7</version>
+  <name>zeroconf_avahi</name>
+  <version>0.1.8</version>
   <description>
     General ros communications used by the various zeroconf implementations.    
   </description>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <license>BSD</license>  
 
-  <url type="website">http://www.ros.org/wiki/zeroconf_comms</url>
-  <url type="repository">https://github.com/stonier/zeroconf_comms</url>
-  <url type="bugtracker">https://github.com/stonier/zeroconf_comms/issues</url>
+  <url type="website">http://www.ros.org/wiki/zeroconf_avahi</url>
+  <url type="repository">https://github.com/stonier/zeroconf_avahi</url>
+  <url type="bugtracker">https://github.com/stonier/zeroconf_avahi/issues</url>
   <author email="d.stonier@gmail.com">Daniel Stonier</author>
 
   <build_depend>catkin</build_depend>
