--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>zeroconf_avahi</name>
+  <name>zeroconf_msgs</name>
   <version>0.1.8</version>
   <description>
     General ros communications used by the various zeroconf implementations.    
@@ -7,9 +7,9 @@
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <license>BSD</license>  
 
-  <url type="website">http://www.ros.org/wiki/zeroconf_avahi</url>
-  <url type="repository">https://github.com/stonier/zeroconf_avahi</url>
-  <url type="bugtracker">https://github.com/stonier/zeroconf_avahi/issues</url>
+  <url type="website">http://www.ros.org/wiki/zeroconf_msgs</url>
+  <url type="repository">https://github.com/stonier/zeroconf_msgs</url>
+  <url type="bugtracker">https://github.com/stonier/zeroconf_msgs/issues</url>
   <author email="d.stonier@gmail.com">Daniel Stonier</author>
 
   <build_depend>catkin</build_depend>
