catkin fixes for zeroconf dependencies on msgs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(zeroconf_msgs)
 
-find_package(catkin REQUIRED COMPONENTS genmsg std_msgs)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 
 add_message_files(
   DIRECTORY msg
@@ -28,5 +28,7 @@ add_service_files(
 
 generate_messages(DEPENDENCIES std_msgs)
 
-catkin_package()
+catkin_package(
+    CATKIN_DEPENDS message_runtime std_msgs
+)
 
