--- a/package.xml
+++ b/package.xml
@@ -18,5 +18,9 @@
 
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
+
+  <export>
+    <architecture_independent/>
+  </export>
 </package>
 
